Added highlighting to file explorer items

--- a/src/app.less
+++ b/src/app.less
@@ -1,11 +1,16 @@
+body {
+    margin-top: -9px;
+    margin-left: 0px;
+}
+
 .main-window-container {
-    border: 1px solid white;
-    height: 98vh;
+    height: 99.18vh;
 }
 
 .side-menu-container {
     display: 'inline-block';
     width: 15%;
-    border: 1px solid red;
     height: 100%;
+    background-color: #29343f;
+    resize: horizontal;
 }
