--- a/src/components/folder-item.less
+++ b/src/components/folder-item.less
@@ -1,7 +1,21 @@
 .explorer-item {
     color: #c2c2d6;
     font-size: 9.5px;
-    margin-left: 5%;
-    padding: 3px 0px 3px 0px;
+    padding: 3px 0px 3px 5%;
     cursor: pointer;
+
+    &:hover {
+        background-color: grey;
+    }
+}
+
+.explorer-item-title {
+    color: #c2c2d6;
+    font-size: 9.5px;
+    padding: 3px 0px 3px 5%;
+    cursor: pointer;
+
+    &:hover {
+        background-color: grey;
+    }
 }
