Change to file type highlighting

--- a/src/components/folder-content.less
+++ b/src/components/folder-content.less
@@ -8,3 +8,14 @@
         background-color: grey;
     }
 }
+
+.explorer-item {
+    color: #c2c2d6;
+    font-size: 9.5px;
+    padding: 3px 0px 3px 5%;
+    cursor: pointer;
+
+    &:hover {
+        background-color: grey;
+    }
+}
