Changed colors to file explorer item highlight

--- a/src/components/folder-item.less
+++ b/src/components/folder-item.less
@@ -5,7 +5,7 @@
     cursor: pointer;
 
     &:hover {
-        background-color: grey;
+        background-color: #525F7B;
     }
 }
 
@@ -16,6 +16,6 @@
     cursor: pointer;
 
     &:hover {
-        background-color: grey;
+        background-color: #525F7B;
     }
 }
