Changes to file explorer

--- a/src/components/folder-content.less
+++ b/src/components/folder-content.less
@@ -8,3 +8,25 @@
         background-color: #525F7B;
     }
 }
+
+.explorer-item {
+    color: #c2c2d6;
+    font-size: 9.5px;
+    
+    cursor: pointer;
+    display: block;
+
+    &:hover {
+        background-color: #525F7B;
+    }
+}
+
+.explorer-item-container {
+    display: block;
+    position: relative;
+    padding: 3px 0px 3px 5%;
+
+    &:hover {
+        background-color: #525F7B;
+    }
+}
