highlights in file explorer working as expected

--- a/src/components/folder-content.less
+++ b/src/components/folder-content.less
@@ -30,3 +30,25 @@
         background-color: #525F7B;
     }
 }
+
+.explorer-item-con {
+    display: block;
+    position: relative;
+    padding: 3px 0px 3px 5%;
+}
+
+.root-explorer-item-container {
+    display: block;
+    position: relative;
+}
+
+.nested-explorer-item-container {
+    display: block;
+    position: relative;
+}
+
+.nested-explorer-item-container .explorer-item-text{
+    display: block;
+    position: relative;
+    padding: 3px 0px 3px 5%;
+}
