--- a/src/components/file-explorer.less
+++ b/src/components/file-explorer.less
@@ -7,3 +7,24 @@
     font-size: 10px;
     margin-left: 5%;
 }
+
+.root-folder {
+    color: #c2c2d6;
+    font-size: 9.5px;
+    padding: 3px 0px 3px 10px;
+    cursor: pointer;
+
+    &:hover {
+        background-color: #525F7B;
+    }
+}
+
+.explorer-item {
+    color: #c2c2d6;
+    font-size: 9.5px;
+    cursor: pointer;
+
+    &:hover {
+        background-color: #525F7B;
+    }
+}
