File Explorer styling changes and added react-fa for font awesome icons

--- a/src/components/file-explorer.less
+++ b/src/components/file-explorer.less
@@ -3,28 +3,35 @@
 }
 
 .explorer-header {
-    color: grey;
-    font-size: 10px;
-    margin-left: 5%;
+    color: #A2BDEA;
+    font-size: 12px;
+    margin-left: 30%;
+    padding-top: 10px;
 }
 
 .root-folder {
     color: #c2c2d6;
-    font-size: 9.5px;
+    font-size: 10px;
     padding: 3px 0px 3px 10px;
     cursor: pointer;
-
-    &:hover {
-        background-color: #525F7B;
-    }
 }
 
 .explorer-item {
     color: #c2c2d6;
-    font-size: 9.5px;
+    font-size: 10px;
+    padding: 3px 0px 3px 0px;
     cursor: pointer;
 
     &:hover {
-        background-color: #525F7B;
+        background-color: #23262C;
     }
+}
+
+.explorer-item-icon {
+    font-size: 8px;
+    margin-right: 5px;
+} 
+
+.explorer-item .selected-item {
+    color: #525F7B !important;
 }
