--- a/src/components/file-explorer.less
+++ b/src/components/file-explorer.less
@@ -1,5 +1,5 @@
 .explorer-container {
-    font-family: 'Fira Mono', monospace;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .explorer-header {
