Refactors to file explorer

--- a/src/components/file-explorer/file-explorer.less
+++ b/src/components/file-explorer/file-explorer.less
@@ -22,6 +22,10 @@
     padding: 3px 0px 3px 0px;
     cursor: pointer;
 
+    & .selected-item {
+        color: #525F7B !important;
+    }
+
     &:hover {
         background-color: #23262C;
     }
@@ -30,8 +34,4 @@
 .explorer-item-icon {
     font-size: 8px;
     margin-right: 5px;
-} 
-
-.explorer-item .selected-item {
-    color: #525F7B !important;
 }
