Added file selection style to side menu and storing that FileDirectoryNode in redux store

--- a/src/components/file-explorer/file-explorer.less
+++ b/src/components/file-explorer/file-explorer.less
@@ -22,13 +22,13 @@
     padding: 3px 0px 3px 0px;
     cursor: pointer;
 
-    & .selected-item {
-        color: #525F7B !important;
-    }
-
     &:hover {
         background-color: #23262C;
     }
+}
+
+.explorer-item.selected-file {
+    background-color: #525F7B;
 }
 
 .explorer-item-icon {
