Added editor window container next to side menu

--- a/src/app.less
+++ b/src/app.less
@@ -5,13 +5,18 @@ body {
 
 .main-window-container {
     height: 99.18vh;
+    display: flex;
 }
 
 .side-menu-container {
-    display: 'inline-block';
     width: 15%;
     height: 100%;
     background-color: #29343f;
     resize: horizontal;
     overflow-y: auto
+}
+
+.editor-window-container {
+    flex: 1;
+    border: 1px solid whitesmoke;
 }
