Added tab structure

--- a/src/app.less
+++ b/src/app.less
@@ -1,11 +1,11 @@
 body {
-    margin-top: -9px;
-    margin-left: 0px;
+    margin: 0px 0px 0px 0px;
 }
 
 .main-window-container {
-    height: 99.18vh;
+    height: 100vh;
     display: flex;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .side-menu-container {
@@ -18,5 +18,4 @@ body {
 
 .editor-window-container {
     flex: 1;
-    border: 1px solid whitesmoke;
 }
