--- a/src/components/file-explorer/file-explorer.less
+++ b/src/components/file-explorer/file-explorer.less
@@ -1,9 +1,5 @@
-.explorer-container {
-    font-family: 'Montserrat', sans-serif;
-}
-
 .explorer-header {
-    color: #A2BDEA;
+    color: #26C9B8;
     font-size: 12px;
     margin-left: 30%;
     padding-top: 10px;
