Added close functionality to tabs

--- a/src/app.less
+++ b/src/app.less
@@ -11,7 +11,7 @@ body {
 .side-menu-container {
     width: 15%;
     height: 100%;
-    background-color: #29343f;
+    background-color: #232A2D;
     resize: horizontal;
     overflow-y: auto
 }
