--- a/src/components/editor/tabs/editor-tab.less
+++ b/src/components/editor/tabs/editor-tab.less
@@ -24,6 +24,14 @@
     margin-right: 10px;
 }
 
+.explorer-item-close-icon {
+    font-size: 11px;
+    margin-left: 10px; 
+    color: whitesmoke;
+    font-weight: 600;
+    z-index: 2;
+}
+
 .editor-tab-item-content {
     margin: 10px;
 }
