--- a/src/components/file-explorer/file-explorer.less
+++ b/src/components/file-explorer/file-explorer.less
@@ -19,12 +19,12 @@
     cursor: pointer;
 
     &:hover {
-        background-color: #23262C;
+        background-color: #1E2325;
     }
 }
 
 .explorer-item.selected-file {
-    background-color: #525F7B;
+    background-color: #305461;
 }
 
 .explorer-item-icon {
