Refactors and disabled text hightlighting in tabs and file explorer

--- a/src/app.less
+++ b/src/app.less
@@ -2,7 +2,7 @@ body {
     margin: 0px 0px 0px 0px;
 }
 
-.main-window-container {
+.app-window-container {
     height: 100vh;
     display: flex;
     font-family: 'Montserrat', sans-serif;
