--- a/src/components/editor/tabs/editor-tabs.less
+++ b/src/components/editor/tabs/editor-tabs.less
@@ -4,4 +4,11 @@
     width: 100%;
     position: relative;
     background-color: #212020;
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 } 
