--- a/src/components/file-explorer/file-explorer.less
+++ b/src/components/file-explorer/file-explorer.less
@@ -18,6 +18,13 @@
     padding: 3px 0px 3px 0px;
     cursor: pointer;
 
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
     &:hover {
         background-color: #1E2325;
     }
