Styled file explorer scroll bar to match theme

--- a/src/spa/side-menu/file-explorer/file-explorer.less
+++ b/src/spa/side-menu/file-explorer/file-explorer.less
@@ -6,3 +6,23 @@
     user-select: none;
     cursor: default;
 }
+
+.file-explorer-wrapper {
+    height: 97%;
+}
+
+.file-explorer-content {
+    height: 100%;
+    overflow-y: auto;
+}
+
+.file-explorer-content::-webkit-scrollbar {     
+    background-color: transparent;
+    width: .4em;
+}
+
+.file-explorer-content::-webkit-scrollbar-thumb:window-inactive,
+::-webkit-scrollbar-thumb {
+    border-radius:10px;
+    background:  #21AB9D;
+}
