--- a/src/app.less
+++ b/src/app.less
@@ -12,8 +12,7 @@ body {
     width: 15%;
     height: 100%;
     background-color: #232A2D;
-    resize: horizontal;
-    overflow-y: auto
+    overflow-y: hidden;
 }
 
 .editor-window-container {
