--- a/src/app.less
+++ b/src/app.less
@@ -12,7 +12,7 @@ body {
     width: 15%;
     height: 100%;
     background-color: #232A2D;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 .editor-window-container {
